--- a/backend/.env
+++ b/backend/.env
@@ -1,7 +1,3 @@
-MONGO_URL="mongodb://localhost:27017"
-DB_NAME="test_database"
-CORS_ORIGINS="*"
-
-# Telegram API Credentials (adicione suas credenciais aqui)
-# TELEGRAM_API_ID=seu_api_id
-# TELEGRAM_API_HASH=sua_api_hash
+API_ID=27988080
+API_HASH=64791a7e492b0d40beb5bf433399bd38
+CORS_ORIGINS=*
